<resources>
    <string name="app_name">uihealth</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_done">完成</string>
    <string name="action_changeuser">切换用户</string>
    <string name="startactivity_introduce">预测十年内您的冠心病发病率</string>
    <string name="login_label_username">账号 </string>
    <string name="login_label_password">密码 </string>
    <string name="login_username_hint">用户名或邮箱</string>
    <string name="login_password_hint">登录密码</string>
    <string name="login_button_label">登 录</string>
    <string name="login_register_link">没有账号？注册</string>
    <string name="register_label_username">用户名: </string>
    <string name="register_label_password">密    码: </string>
    <string name="register_label_email">邮箱号: </string>
    <string name="register_button_label">注 册</string>

    <string name="setting">选项</string>
</resources>
