<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_login_bg"
    >

    <include layout="@layout/toolbar_login_layout"/>

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:layout_margin="15dip"
        android:background="@drawable/activity_login_bg_div" >
        <!-- 账号 -->
        <TextView
            android:id="@+id/texteview_loginactivity_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/login_label_username"
            android:textSize="25dp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/edit_loginacitivity_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username_hint"
            android:layout_below="@id/texteview_loginactivity_username"
            android:singleLine="true"
            android:textColorHint="@color/black"
            android:inputType="text" />
        <!-- 密码 text -->
        <TextView
            android:id="@+id/textview_loginactivity_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_loginacitivity_username"
            android:layout_marginTop="3dp"
            android:text="@string/login_label_password"
            android:textSize="25dp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/edit_loginactivity_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_loginactivity_password"
            android:hint="@string/login_password_hint"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="@color/black"
            android:inputType="textPassword" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox_loginactivity_password"
            android:text="记住密码"
            android:checked="false"
            android:layout_below="@id/edit_loginactivity_password"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox_loginactivity_login"
            android:text="自动登入"
            android:checked="false"
            android:layout_toRightOf="@id/checkbox_loginactivity_password"
            android:layout_below="@id/edit_loginactivity_password"
            />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btn_loginactivity_login"
            android:layout_below="@id/checkbox_loginactivity_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#1E88E5"
            android:layout_centerHorizontal="true"
            android:text="@string/login_button_label"
            />

        <TextView
            android:id="@+id/textview_loginactivity_register"
            android:text="@string/login_register_link"
            android:layout_below="@id/btn_loginactivity_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#888"
            android:textColorLink="#FF0066CC"
            android:textSize="20dp"/>

        <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
            android:id="@+id/progressbar_loginactivity"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#1E88E5"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            />

    </RelativeLayout>





</LinearLayout>